Misc Bug fixes (#44)
* fix links

* add height to prevent layout shift

* rm sticky

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -20,3 +20,10 @@ body {
 button:hover {
   cursor: pointer;
 }
+
+a {
+  color: black;
+}
+a:hover {
+  color: #111;
+}
